# espresso

./: CMakeLists.txt  MNIST_reader.h  databatcher_test.cpp  driver.cpp  main.cpp  network_proto.cpp  tensor_test.cpp
Espresso/: DataBatcher.h  DataBatcher.hpp  Network.cpp  Network.h  Tensor.cpp  Tensor.h
Espresso/Nodes/: NetNode.cpp  NetNode.h
enc_temp_folder/6f9f75a64e1df6b7e8bcda5bc29ba04f/: network_proto.cpp
